# EVHelperCore

./: .gitignore  Pipfile  README.md  pyproject.toml  setup.py
EVHelperCore/Calculations/: Damage.py  StatTemplates.py  Stats.py
EVHelperCore/Exceptions/: Miscellaneous.py  __init__.py
EVHelperCore/Interfaces/: IJsonable.py  __init__.py
EVHelperCore/Objects/: Ability.py  BoardState.py  DamageModifier.py  Dex.py  Generation.py  Item.py  Move.py  Name.py  PokemonData.py  StatTemplate.py  Stats.py  Type.py  Variant.py  __init__.py
EVHelperCore/Objects/MiscInfo/: EVYield.py  Evolution.py  GenderRatio.py  MiscInfo.py  __init__.py
EVHelperCore/UnitTests/: CaclulationTests.py  ObjectTests.py
EVHelperCore/Utils/: DictUtils.py  FormatUtils.py  ShowdownUtils.py
src/EVHelperCore/: __init__.py
src/EVHelperCore/Calculations/: Damage.py  StatTemplates.py  Stats.py  __init__.py
src/EVHelperCore/Exceptions/: __init__.py
src/EVHelperCore/Objects/: Ability.py  BoardState.py  DamageModifier.py  Dex.py  Move.py  Name.py  PokemonData.py  StatTemplate.py  Type.py  __init__.py
src/EVHelperCore/Utils/: DictUtils.py  FormatUtils.py  ShowdownUtils.py  __init__.py
src/SprelfPkmn/: __init__.py
src/SprelfPkmn/Calculations/: Damage.py  StatTemplates.py  Stats.py
src/SprelfPkmn/Exceptions/: Localization.py  __init__.py
src/SprelfPkmn/Objects/: BoardState.py  Item.py  Move.py  Name.py  PokemonData.py  StatTemplate.py  Stats.py  Variant.py  __init__.py
src/SprelfPkmn/Utils/: FormatUtils.py  ShowdownUtils.py  __init__.py
tests/: CaclulationTests.py  ObjectTests.py
(+9 files in other folders)
